# pycfs-signal

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
examples/: batch_convert.py
pycfs/: __init__.py  cfs.py  frame.py  read.py  structure.py
