[project]
name = "pycfs-signal"
version = "0.2.0"
authors = [
  {name="Austin Hurst", email="mynameisaustinhurst@gmail.com"},
]
description = "A pure-Python library for reading CED Signal CFS files"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'numpy>=1.20.0',
]
license = {text = "MPL-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MPL-2.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/a-hurst/pycfs-signal"
"Bug Tracker" = "https://github.com/a-hurst/pycfs-signal/issues"

[tool.setuptools]
packages = ["pycfs"]
